# opengl_snippets

./: .gitmodules  CMakeLists.txt  README.md  common.cpp  common.h  index_buffer.cpp  index_buffer.h  square.cpp  triangle.cpp  triangle_uniform.cpp  triangle_vertex_buffers.cpp  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
include/: common.h  glfw_window.h  imgui_window.h  index_buffer.h  renderer.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
res/shaders/: batch.frag  batch.vert  color.vert  normal.vert  texture.vert  texture_blend.frag  triangle.frag  triangle_texture.frag  triangle_texture.vert  triangle_uniform.frag
src/: common.cpp  glfw_window.cpp  imgui_window.cpp  index_buffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
src/examples/: background_color_example.cpp  background_color_example.h  batch_rendering_example.cpp  batch_rendering_example.h  clear_color_example.cpp  clear_color_example.h  demo.cpp  example.h  glfw_window.cpp  imgui_window.cpp  materials.cpp  materials.h  multiple_objects_example.cpp  multiple_objects_example.h  rectangle_example.cpp  rectangle_example.h  rendering_multiple_objects.cpp  shape_example.cpp  shape_example.h  shapes.cpp  shapes.h  square.cpp  square_blend.cpp  square_example.cpp  square_example.h  square_proj_matrix.cpp  texture_example.cpp  texture_example.h  triangle.cpp  triangle_example.cpp  triangle_example.h  triangle_legacy.cpp  triangle_texture.cpp  triangle_uniform.cpp
